--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "2.1.4",
     "@tailwindcss/forms": "0.4.0",
     "autoprefixer": "10.4.13",
+    "axios": "^1.11.0",
     "dotenv": "16.3.1",
     "find-config": "1.0.0",
     "next": "14.2.4",
