--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "2.1.1",
     "@heroicons/react": "2.1.4",
+    "@supabase/supabase-js": "^2.74.0",
     "@tailwindcss/forms": "0.4.0",
     "autoprefixer": "10.4.13",
     "axios": "^1.11.0",
